tests/invalid/for_empty_tuple_iter/main.py
def main() -> None:
    t: tuple[int, str] = (1, "a")
    for x in t:
        print(x)
